# wmblob

./: .gitignore  AUTHORS  INSTALL  Makefile.am  NEWS  README  configure.ac  screenshot.xcf
doc/: Makefile.am  how_it_works  wmblob.1
src/: Makefile.am  config.h.in  dialog.c  dialog.h  getopt.h  mydockapp.c  mydockapp.h  rcfile.c  rcfile.h  wmblob.c  wmblob.h
