
#
#   this file is part of: wmblob
#
#   the GNU GPL license applies to this file, see file COPYING for details.
#   author: jean-luc herren.
#

bin_PROGRAMS = wmblob

wmblob_SOURCES = \
	wmblob.c wmblob.h \
	dialog.c dialog.h \
	rcfile.c rcfile.h \
	mydockapp.c mydockapp.h \
	getopt.c getopt1.c getopt_init.c getopt.h

EXTRA_DIST =

